BoolVoidReturnWarning/expected.log
BoolWarning.swift:2:12: error: unexpected non-void return value in void function
    return true
           ^~~~
